# geneweb

./: .gitignore  Makefile  configure  configure.ml  fanchart.js  geneweb-gwdb-mariadb.opam  list_includes.sh
contrib/gwpublic/: gwdead1.ml
contrib/mysql/: .gitignore  README.MD  changeOccupations.sql  changePlaces.sql  compile.sh  create_tables.sql  create_tables_history.sql  gw2mysql.ml  load_old_history.sql  mysql.sh  run.sh  run2.sh  test-asc.sql
hd/etc/: advanced.txt  anccarto.txt  ancmenu.txt  copyr.txt  dag.txt  descarto.txt  desmenu.txt  fanchart.txt  home.txt  js.txt  menubar.txt  notes_gallery.txt  notes_upd_gallery.txt  perso.txt  perso_header.txt  perso_utils.txt  ps_form.txt  relmenu.txt  (+7 more)
lib/: advSearchOk.ml  birthDeath.ml  config.mli  dag.ml  descend.ml  gwDaemon.ml  gwdb.ml  gwdb.mli  gwuLib.ml  json.ml  mergeIndOk.ml  notes.ml  notes.mli  perso.ml  place.ml  relationLink.ml  request.ml  requestHandler.ml  some.ml  srcfile.ml  srcfile.mli  templ.camlp5  templ.camlp5.ml  update.camlp5.ml  updateData.ml  updateIndOk.ml  util.ml  util.mli  wiki.ml
src/: Makefile  check.ml  checkItem.ml  checkItem.mli  config.mli  date.ml  date.mli  db2link.ml  def.mli  descend.ml  doc.ml  forum.ml  gwc.ml  gwc2.ml  gwcomp.ml  gwcomp.mli  gwd.ml  gwu.ml  history.ml  history_diff.ml  image.ml  mergeInd.ml  mutil.ml  mutil.mli  name.ml  notes.ml  notes.mli  perso.ml  perso.mli  place.ml  request.ml  some.ml  templ.ml  update.ml  updateFamOk.ml  updateInd.ml  updateIndOk.ml  update_nldb.ml  util.ml  util.mli  (+4 more)
tools/: Makefile.inc  Makefile.inc.unix
wserver/: wserver.ml
(+31 files in other folders)
